# JAProject

App/: CMakeLists.txt  README.md  imgui.ini  main.cpp
App/App/: App.cpp  App.h
App/Camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h
App/MeshLoader/: MeshLoader.cpp  MeshLoader.h
App/Model/: Model.cpp  Model.h  ModelInstance.cpp  ModelInstance.h  ShaderGroup.cpp  ShaderGroup.h
App/RenderingContext/: RenderingContext.cpp  RenderingContext.h
App/Resources/Shaders/: BasicShader.fs  BasicShader.vs  DirectLightShader.fs  DirectLightShader.vs
App/Scene/: DemoScene.cpp  DemoScene.h  Scene.cpp  Scene.h  TorusParams.h  TorusStats.h
App/Shaders/: ShaderCompiler.cpp  ShaderCompiler.h  ShaderProgram.cpp  ShaderProgram.h
App/glad/include/glad/: glad.h
App/glad/src/: glad.c
Asm/: torusgen.asm
Cpp/: CMakeLists.txt  TorusGenerator.cpp  TorusGenerator.h  TorusGenerator.s
